Deposits build on top of each other out from River direction

--- a/doc/thesis.tex
+++ b/doc/thesis.tex
@@ -215,7 +215,7 @@ There are three abstract steps from user to the visual image. The visual feeback
 The abstract concept from the users perspective is that there is a certain structure he wants to model. In his head he has an abstract notion of each of the parts that are needed and a notion of the image he wants to produce. The user knows how to input parameters that the program will interpret in a certain way to create the structures he needs. This is the first step of the internal algorithms. To interpret the users input.
 
 \subsubsection{Sketch input and interpretation}
-The initial state is the empty cube. At this stage the input consists of the user rotating and drawing on the cube to create layers. Rotating is as explained earlier done by dragging the mouse while holding a button, and is trivial to achieve by just rotating the camera a certain amount according to how far the mouse was dragged.
+The initial state for input is the empty cube. At this stage the input consists of the user rotating and drawing on the cube to create layers. Rotating is, as mentioned earlier, done by dragging the mouse while holding a button. In code it is trivial to achieve by just rotating the camera a certain amount according to how far the mouse was dragged. The camera object itself is implemented as a class that has a position, a point of rotation and a field of view. I also methods for moving it around, rotating it and for creating a transformation matrix for the opengl viewport.
 
 Drawing is a bit more involved, and to achieve this it is first neccessary to find the correlation of where the user draws on screen and where this corresponds to on the cube. The principle of drawing is acheved in the same manner for all objects in the scene. For this purpose one must know the camera position, camera direction, viewing angle and viewport size. When there is a mouse position somewhere on the screen it is then realatively easy to compute a direction vector from the cameras position and into the scene that will point at the position on the cube that lies under the mouse pointer. When this vector is known, finding the exact point on the cube is a matter of intersection between a ray and a triangle. For most objects there is a structure that contains all the triangles it consists of. Each of the vertices of the triangles are stored together with parametric coordinates that uniqely represents the point on the two-dimentional surface of the object.
 
